--- a/ui/src/components/HeaderBar/index.module.less
+++ b/ui/src/components/HeaderBar/index.module.less
@@ -27,6 +27,7 @@
         font-weight: 600;
         font-size: 18px;
         line-height: 32px;
+        white-space: nowrap;
       }
     }
   }
