--- a/ui/src/layouts/AppLayout/index.module.less
+++ b/ui/src/layouts/AppLayout/index.module.less
@@ -6,6 +6,6 @@
     display: flex;
     flex-direction: column;
     box-sizing: border-box;
-    margin: 20px;
+    margin: 1rem;
   }
 }
